tests/should_fail/undefined_variable.nv
module undefined_variable
// SHOULD FAIL: using a variable that was never declared
println(does_not_exist)
